feat: add hide tag

--- a/src/chrome/opacity.css
+++ b/src/chrome/opacity.css
@@ -1,27 +1,16 @@
 /* AD Still there :) */
 /* Homepage ad */
-ytd-display-ad-renderer {
-    opacity: 0.05 !important;
-    pointer-events: none !important;
-}
-
-ytd-video-display-full-buttoned-renderer {
-    opacity: 0.05 !important;
-    pointer-events: none !important;
-}
-
+ytd-display-ad-renderer,
+ytd-video-display-full-buttoned-renderer,
 ytd-ad-slot-renderer {
     opacity: 0.05 !important;
     pointer-events: none !important;
 }
 
 /* video side ad*/
-ytd-action-companion-ad-renderer {
-    opacity: 0.05 !important;
-    pointer-events: none !important;
-}
-
-ytd-image-companion-renderer {
+ytd-action-companion-ad-renderer,
+ytd-image-companion-renderer,
+ytd-engagement-panel-section-list-renderer {
     opacity: 0.05 !important;
     pointer-events: none !important;
 }
